feat: Implement seeder classes for departments, courses, students, and teachers; enhance user role redirection in routes

--- a/draft.yaml
+++ b/draft.yaml
@@ -21,6 +21,7 @@ models:
     last_name: string
     department_id: id foreign
 
+seeders: Student, Teacher, Department, Course
 controllers:
   Auth/Register:
     invokable
