feat: Implement lesson management features for teachers
- Add create lesson functionality with file upload support.
- Implement lesson editing with options to update content and manage file attachments.
- Create lesson viewing page displaying content and file download option.
- Refactor section show page to utilize Livewire components for lessons, news, students, and teachers tabs.
- Remove deprecated lesson display logic from section show view.
- Update routes to include new lesson management routes for create, edit, and view actions.

--- a/draft.yaml
+++ b/draft.yaml
@@ -22,6 +22,7 @@ models:
     middle_name: string nullable
     last_name: string
     department_id: id foreign
+    is_department_head: boolean default:false
 
   Section:
     name: string
