feat: Update database schema and implement department head management
- Updated migration files for departments, courses, students, teachers, sections, lessons, quizzes, questions, options, quiz attempts, student answers, news, and section-student relationships.
- Added new News model and corresponding migration.
- Implemented DepartmentHeads page for managing department heads in the Filament admin panel.
- Enhanced ManageDepartments page with a button to manage department heads.
- Updated Department model to include a relationship with teachers.
- Adjusted StudentSeeder to create 100 students instead of 1000.
- Modified lesson view to improve layout and display additional metadata.

--- a/draft.yaml
+++ b/draft.yaml
@@ -79,4 +79,10 @@ models:
     answer_text: text nullable
     is_correct: boolean nullable
 
+  News:
+    title: string
+    content: text
+    section_id: id foreign
+    teacher_id: id foreign
+
 # seeders: Student, Teacher, Department, Course
